# CarPanel

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
include/: Background.h  CMakeLists.txt  CarPanel.h  Control.h  ControlXMLParser.h  Dial.h  DialNeedle.h  DialOuter.h  Display.h  DisplayTop.h  Global.h  Indicator.h  RevCounter.h  Speedometer.h  XMLParser.h
resources/: Display.qss  emptyCarPanel.xml  parser.xsd
src/: CarPanel.cpp  Control.cpp  ControlXMLParser.cpp  Dial.cpp  DialNeedle.cpp  DialOuter.cpp  Display.cpp  DisplayTop.cpp  Indicator.cpp  RevCounter.cpp  Speedometer.cpp  XMLParser.cpp  main.cpp
